02 Modificación de gradle.properties para que consume menos RAM.

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,2 +1,5 @@
-org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+# Asignamos 2GB (2048m) máximo al Heap. Esto deja 5GB+ para tu SO, VS Code y el Emulador.
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m -XX:ReservedCodeCacheSize=256m -XX:+HeapDumpOnOutOfMemoryError
+
 android.useAndroidX=true
+android.enableJetifier=true
