--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,13 @@ environment:
   sdk: ^3.10.1
 
 dependencies:
+  connectivity_plus: ^7.0.0
+  crypto: ^3.0.7
   flutter:
     sdk: flutter
   intl: ^0.20.2
+  path: ^1.9.1
+  sqflite: ^2.4.2
   supabase_flutter: ^2.10.3
 
 dev_dependencies:
